# paste-rs

./: .env.example  Cargo.toml  README.md  config.toml
src/: config.rs  lib.rs  main.rs  paste.rs  server.rs  util.rs
