[package]
name = "paste-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.2.1"
config = "0.13.2"
dotenvy = "0.15.6"
env_logger = "0.10.0"
futures-util = "0.3.25"
humantime-serde = "1.1.1"
infer = "0.11.0"
log = "0.4.17"
rand = "0.8.5"
serde = "1.0.148"
serde_json = "1.0.89"
